--- a/RedditService_WebRole/Views/Shared/AddComment.cshtml
+++ b/RedditService_WebRole/Views/Shared/AddComment.cshtml
@@ -4,18 +4,34 @@
     ViewBag.Title = "Add Comment";
 }
 
-<h2>Add Comment</h2>
+<div class="container mt-5">
+    <h2>Add a Comment</h2>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        <div class="form-group">
+            <label for="commentContent" class="form-label">Comment</label>
+            @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = "5", id = "commentContent", placeholder = "Enter your comment here..." })
+        </div>
 
-    <div class="form-group">
-        <label>Comment</label>
-        @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = "5" })
-    </div>
+        <input type="hidden" name="topicId" value="@ViewBag.TopicId" />
 
-    <input type="hidden" name="topicId" value="@ViewBag.TopicId" />
+        <div style="display: flex;">
+            <button type="submit" class="btn btn-primary btn-custom">Add Comment</button>
+            @Html.ActionLink("Cancel", "Index", "Topics", null, new { @class = "btn btn-secondary ml-2 btn-custom", style = "margin: auto;" })
+        </div>
+    }
+</div>
 
-    <button type="submit" class="btn btn-primary">Add Comment</button>
-}
+<style>
+    .form-label {
+        font-weight: bold;
+    }
+    .btn-custom {
+        width: auto;
+    }
+    .navbar-light .navbar-nav .nav-link {
+        color: #333634;
+    }
+</style>
