--- a/RedditService_WebRole/Views/Shared/_Comment.cshtml
+++ b/RedditService_WebRole/Views/Shared/_Comment.cshtml
@@ -4,6 +4,23 @@
 {
     <h5>Comments:</h5>
     <ul class="list-group">
+
+
+
+
+        @{
+            var authCookie = Request.Cookies[System.Web.Security.FormsAuthentication.FormsCookieName];
+            string userName = null;
+            if (authCookie != null)
+            {
+                var authTicket = System.Web.Security.FormsAuthentication.Decrypt(authCookie.Value);
+                userName = authTicket?.Name;
+            }
+        }
+
+        @{ var _repository = new RedditService_Data.RedditDataRepository(); }
+
+
         @foreach (var comment in Model)
         {
             <li class="list-group-item">
@@ -13,12 +30,23 @@
                         <p>@comment.Content</p>
                     </div>
                     <div class="text-right d-flex align-items-center">
-                        <div class="mr-2">
-                            <span class="mr-2">👍 @comment.Upvotes</span>
-                            <span class="mr-2">👎 @comment.Downvotes</span>
-                        </div>
+                        <span class="mr-2">
+                            <i class="fas fa-thumbs-up" style="color: green;"></i> @comment.Upvotes
+                        </span>
+                        <span class="mr-2">
+                            <i class="fas fa-thumbs-down" style="color: red;"></i> @comment.Downvotes
+                        </span>
                         <div class="d-flex align-items-center">
-                            @if (!string.IsNullOrEmpty(ViewBag.UserName) && ViewBag.UserName != comment.UserId)
+
+                            @{
+                                bool hasVoted = false;
+                                if (userName != null)
+                                {
+                                    hasVoted = _repository.HasUserVotedComment(userName, comment.RowKey);
+                                }
+                            }
+
+                            @if (!string.IsNullOrEmpty(ViewBag.UserName) && ViewBag.UserName != comment.UserId && !hasVoted)
                             {
                                 <form action="@Url.Action("UpvoteComment", "Comment")" method="post" class="d-inline">
                                     @Html.AntiForgeryToken()
